--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,7 @@
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.default.includePath": [
-        "${workspaceFolder}",
-        "${workspaceFolder}/common"
+        "${workspaceFolder}/**",
     ],
     "C_Cpp.default.cppStandard": "c++17",
     "C_Cpp.default.compilerPath": "/usr/bin/g++"
